--- a/estilo/style.css
+++ b/estilo/style.css
@@ -52,6 +52,7 @@ section#redes-sociais img {
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.409);
     box-sizing: border-box;
+    padding: 0px
 
 }
 section#redes-sociais img:hover {
