--- a/estilo/style.css
+++ b/estilo/style.css
@@ -108,6 +108,8 @@ nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.189);
+    text-align: center;
+    
 }
 nav > a {
     color: white;
