--- a/estilo/style.css
+++ b/estilo/style.css
@@ -13,16 +13,12 @@
 
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
     
-    
-
 }
 * {
     margin: 0px;
     padding: 0px;
 
 }
-
-
 
 section#redes-cv {
     text-align: center;
@@ -35,7 +31,6 @@ section#redes-cv img {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.409);
     box-sizing: border-box;
     
-
 }
 section#redes-cv img:hover {
     border: 2px solid rgba(110, 103, 138, 0.432);
@@ -63,8 +58,6 @@ section#redes-sociais img:hover {
     transition: transform 0.5s;
 }
 
-
-
 body    {
     background-image: linear-gradient(45deg, #298bd1,#3198e2,#e0e0ef,#6d59c0,#453585 );
     background-color:var(--cor0);
@@ -78,8 +71,7 @@ p {
     text-indent: 30px;
     line-height: 2em;
     font-size: 1em;
-    
-    
+       
 }
 
 header {
@@ -102,8 +94,7 @@ header > p {
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-    
-    
+     
 }
 
 nav {
@@ -137,6 +128,7 @@ main {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+
 }
 div.video {
 background-color: var(--cor5);
@@ -145,61 +137,54 @@ padding: 20px;
 padding-bottom: 52%;
 position: relative;
 }
-div.video > iframe {
-    
+
+div.video > iframe {  
     position:absolute;
     top: 5%;
     left: 5%;
     width: 90%;
     height: 90%;
-
 }
-
-
 
 main h1 {
     color:var(--cor5);
     font-family: Arial, Helvetica, sans-serif;
     background-image:linear-gradient(to right, var(--cor1),transparent);
-
 }
+
 main h2 {
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
-    text-shadow:2px 2px #ffffff;
-    
-   
+    text-shadow:2px 2px #ffffff;  
 }
- main h3 {
+
+main h3 {
     margin: auto;
     text-align: center;
- }
+}
 
 main h4 img {
     border-radius: 600px;
-    border: 4px solid rgb(255, 255, 255);}
+    border: 4px solid rgb(255, 255, 255);
+}
 
-
-
- main h4 {
+main h4 {
     margin: auto;
     text-align: center;
     
- }
+}
 
- main a { 
+main a { 
     text-decoration: none;
     font-weight: bold;
     color: var(--cor5);
-    
     padding: 2px 6px;
  }
+
  main a:hover {
     text-decoration: underline;
     color: var(--cor3)
  }
-
-
 
 footer {
     background-color: var(--cor5);
@@ -207,5 +192,4 @@ footer {
     text-align: center;
     font-size: 0.8em;
     padding: 5px;
-
 }
